Adds option for min-q in GATK ASM

--- a/config/test.yaml
+++ b/config/test.yaml
@@ -81,16 +81,21 @@ noprocess: false
 # -----------------------------------------------------------------------------
 # Other parameters:
 #
+#
 # kmers: The kmer length to use for BBMap jobs.
 #
 # sam: The SAM format version to use for BBMap jobs. This should be "1.3" for most cases.
 #
 # mem: Memory to allocate for BBMap jobs with Java (in GB)
+#
+# min_q: Used in GATK: the minimum quality score for bases to be analyzed. 
+#
 # -----------------------------------------------------------------------------
 
 kmers: 15
 sam: "1.3"
 mem: 16
+min_q: 30
 
 # -----------------------------------------------------------------------------
 # Other resources:
