--- a/config/multiqc_config.yaml
+++ b/config/multiqc_config.yaml
@@ -4,6 +4,28 @@ extra_fn_clean_exts:
   - "_merge"
   - "_accepted_processing.tsv"
   - "_rejected_processing.tsv"
+  - "_total_processing.tsv"
+
+  variant_processing_total:
+    file_format: "tsv"
+    section_name: "Variant processing stats"
+    description: "This section contains statistics about whether called variants were retained for analysis or not. By default,
+     variants are filtered out if they are not in the designed variants csv."
+    plot_type: "bargraph"
+    pconfig:
+      id: "variant_processing"
+      title: "Variant processing (total)"
+      xlab: "Counts"
+    categories: 
+      total_counts: 
+        name: "Total processed counts"
+        color: "#009E73"
+      total_accepted_counts: 
+        name: "Accepted counts"
+        color: "#CC79A7"
+      total_rejected_counts: 
+        name: "Filtered counts"
+        color: "#E69F00"
 
 custom_data:
   variant_processing_accepted:
@@ -66,7 +88,10 @@ custom_data:
         name: "Multiple changes"
         color: "#999999"
 
+
 sp:
+  variant_processing_total:
+    fn: "*_total_processing.tsv"
   variant_processing_accepted:
     fn: "*_accepted_processing.tsv"
   variant_processing_rejected:
