--- a/config/test.yaml
+++ b/config/test.yaml
@@ -98,12 +98,18 @@ baseline_condition: baseline
 #
 # min_q: Used in GATK: the minimum quality score for bases to be analyzed. 
 #
+# samtools_local: Flag for whether to use a locally-installed samtools or the wrapper version.
+#                 This is useful for platforms (such as ARM Macs currently) where conda does
+#                 not have a compatible samtools version.
+#
 # -----------------------------------------------------------------------------
 
 kmers: 15
 sam: "1.3"
 mem: 16
 min_q: 30
+
+samtools_local: false
 
 # -----------------------------------------------------------------------------
 # Other resources:
